

		CHANGES in `mboost' VERSION 1.0-7 (2009-01-xx)


		CHANGES in `mboost' VERSION 1.0-6 (2009-01-09)

  o  bols allows to specify non-default contrasts.


		CHANGES in `mboost' VERSION 1.0-5 (2008-12-02)

  o  remove experimental memory optimization steps


		CHANGES in `mboost' VERSION 1.0-4 (2008-11-12)

  o  negative gradient of GaussClass() was wrong, spotted by
     Kao Lin <linkao@picb.ac.cn>


		CHANGES in `mboost' VERSION 1.0-3 (2008-11-07)

  o  Date was malformed in DESCRIPTION


		CHANGES in `mboost' VERSION 1.0-2 (2008-11-05)

  o  improved memory footprint in gamboost() and cvrisk()

  o  option to suppress saving of ensembless added to 
     boost_control()

  o  bbs(), bns(), bspatial(): default number of knots changed to 
     a fixed value (= 20)

  o  changed default for grid (now uses all iterations) in 
     cvrisk() and changed plot.cvrisk()

  o  bols: works now for factors and can be set-up
     to use Ridge-estimation. Intercept can be omitted
     now (via center = TRUE).

  o  new btree() baselearner for gamboost() available

  o  fix inconsistencies in regression tests

  o  add coef.gamboost

  o  new generic `survFit'

  o  cosmetics for trace = TRUE


		CHANGES in `mboost' VERSION 1.0-1 (2007-12-09)

  o  inst/mboost_Bioinf.R was missing from mboost 1.0-0


		CHANGES in `mboost' VERSION 1.0-0 (2007-11-13)

  o  documentation updates


		CHANGES in `mboost' VERSION 0.9-0 (internal)

  o  tests update and release the new version on CRAN

  o  predict(..., allIterations = TRUE) returns the matrix
     of predictors for all boosting iterations


		CHANGES in `mboost' VERSION 0.6-2 (internal)

  o  move `mboost' to R-forge

  o  improvements in `gamboost':
     - P-splines as base learners available
     - new formula interface for specifying the base learner
     - new plot.gamboost

  o  add the number of selected variables as degrees of freedom
     (as mentioned in the discussion of Hastie to Buhlmann & Hothorn)
