@@ -2,6 +2,8 @@
 
 		CHANGES in `mboost' VERSION 1.0-7 (2009-01-xx)
 
+  o  btree can now deal with multiple variables
+
 
 		CHANGES in `mboost' VERSION 1.0-6 (2009-01-09)
 
